--- a/example/index.html
+++ b/example/index.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
+  <!-- jquery localtime is not essential but makes it nicer -->
+  <script src="jquery.localtime-0.9.1.min.js"></script>
 </head>
 <body>
   <div class="jumbotron">
